# typst-gtk

./: Cargo.toml  README.md  com.rutins.Typst.json  meson.build
data/: com.rutins.Typst.appdata.xml.in  com.rutins.Typst.desktop.in  com.rutins.Typst.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.rs  config.rs  main.rs  meson.build  typst-gtk.gresource.xml  window.rs  window.ui
src/typst_wrapper/: mod.rs  world.rs
