[package]
name = "typst-gtk"
version = "0.1.0"
edition = "2021"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.6", package = "gtk4" }
comemo = { git = "https://github.com/typst/comemo" }
dirs = "5.0.0"
elsa = "1.8.0"
libc = "0.2.140"
memmap2 = "0.5.10"
notify = "5.1.0"
once_cell = "1.17.1"
same-file = "1.0.6"
siphasher = "0.3.10"
termcolor = "1.2.0"
typst = { git = "https://github.com/typst/typst" }
typst_library = { git = "https://github.com/typst/typst", package = "typst-library" }
walkdir = "2.3.3"

[dependencies.adw]
package = "libadwaita"
version = "0.3"
features = ["v1_2"]
